<resources>
    <string name="app_name">Ανομολόγητα</string>
    <string name="action_settings">Ρυθμίσεις</string>
    <string name="notifications">next</string>
    <string name="chat">chat</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="banner_ad">ca-app-pub-5007584823334636/2263888508</string>
    <string name="full_ad">ca-app-pub-5007584823334636/9866050505</string>
    <string-array name="tabs">
        <item>ΝΕΑ</item>
        <item>ΚΟΡΥΦΑΙΑ</item>
    </string-array>
    <string name="me">Εγώ</string>
    <string name="add_new_image">+<u> Αλλαγη εικόνας γκρουπ</u></string>
    <string name="searchGroup"><u>Αναζήτησε γκρουπ</u></string>
    <string name="selectImage">setImage</string>
    <string name="HashTag">HashTag</string>
    <string name="time">10min</string>
    <string name="post">Post</string>
    <string name="location">(Location)</string>
    <string name="likeCount">0</string>
    <string name="likeDescription">the like image</string>
    <string name="commentDescription">the comment icon</string>
    <string name="commentCount">0</string>
    <string name="messageDescription">The personal message icon. Invisible when the post is yours. Visible when post is not yours</string>
    <string name="editPostDescription">Edit icon. Invisible when post is not yours. Visible when post is yours.</string>
    <string name="splashLogoDescription">Center image logo in splash screen</string>
    <string name="notificationDescription">Image that displays the type of notification. Like, comment or subscribe</string>
    <string name="notification">Notification</string>
    <string name="deleteNotificationDesc">Image for deleting the notification</string>
    <string name="navTitle">TITLE</string>
    <string name="editGroupDesc">Icon for editing the current group</string>
    <string name="groupIconDesc">The current group icon</string>
    <string name="groupName">Ανομολόγητα</string>
    <string name="subsTitle">Αγαπημένα</string>
    <string name="subs">0</string>
    <string name="editPostDesc">Icon for editing the current post</string>
    <string name="bigCircleDesc">Background white circle</string>
    <string name="subscribeButton">+ Πρόσθεσέ το στα Αγαπημένα</string>
    <string name="subscribedButton">Αγαπημένο</string>
    <string name="createGroupNameHint">Γράψε το όνομα του γκρουπ\n (π.χ. Πανεπιστήμιο Μακεδονίας)</string>
    <string name="createHashTagHint">Γράψε το πρώτο hashtag του γκρουπ!\n(π.χ. έφαγακεφτέδες)</string>
    <string name="deleteConversationDesc">Icon for deleting the current group</string>
    <string name="conTitle">Conversation</string>
    <string name="sender">Ποιός</string>
    <string name="lastMessage">Last Personal Message</string>
    <string name="chatPostHint">Γράψε το μήνυμα σου…</string>
    <string name="postDesc">Icon for posting</string>
    <string name="search">Search</string>
    <string name="searchAction">Search</string>
    <string name="toolbarDelete">Delete</string>
    <string name="subsTextA">"Το γκρουπ αρέσει σε "</string>
    <string name="subsTextB">" άτομα"</string>
    <string name="edit_group"> Share</string>
    <string name="notificationTitle">ΕΙΔΟΠΟΙΗΣΕΙΣ</string>
    <string name="switch2">ΗΧΟΣ ΕΙΔΟΠΟΙΗΣΕΩΝ</string>
    <string name="noInternet">ΔΕΝ ΥΠΑΡΧΕΙ ΣYΝΔΕΣΗ</string>
    <string name="termsTitle">Όροι Χρήσης</string>
    <string name="postSize">0/2000</string>
    <string name="locationSize">0/50</string>
    <string name="deleted">Το γκρούπ έχει διαγραφεί</string>
    <string name="complaints">Όταν μας στείλετε την αναφορά, δώστε μας όσα περισσότερα στοιχεία για να μπορέσουμε να σας εξυπηρετήσουμε</string>
    <string name="noNotificationsTop">Δεν υπάρχουν ειδοποιήσεις\n\n</string>
    <string name="noNotificationsBottom">Πόσταρε ανομολόγητα\n ή\n δημιούργησε γκρουπ\n για να αποκτήσεις</string>
    <string name="noConversationsTop">Δεν υπάρχουν συνομιλίες\n\n</string>
    <string name="noConversationsBottom">Πόσταρε ανομολόγητα\n ή\n στείλε προσωπικά μηνύματα\n για να αποκτήσεις</string>
    <string name="report">Αναφορά</string>
    <string name="admin">(Admin)</string>
    <string name="shareDialog">ΚΟΙΝΟΠΟΙΗΣΕ ΤΟ ΠΟΣΤ</string>
    <string name="messageDialog">ΠΡΟΣΩΠΙΚΟ ΜΗΝΥΜΑ</string>
    <string name="editDialog">ΕΠΕΞΕΡΓΑΣΙΑ ΠΟΣΤ</string>
    <string name="mainCreateGroup"><u>Δημιούργησε γκρουπ</u></string>
    <string name="postRules">
        1. ΔΕΝ βρίζουμε και ΔΕΝ στοχοποιούμε κανέναν ονομαστικά.\n\n
        2. ΔΕΝ αναφέρουμε προσωπικά στοιχεία τρίτων.\n\n
        3. ΔΕΝ γράφουμε πράγματα τα οποία δεν βγάζουν νόημα.\n\n
        4. Αν γίνει κάτι από τα τρία πρώτα τα ποστ σας διαγράφονται και δεν έχετε δικαίωμα να ξαναποστάρετε.\n\n
        5. Αν δείτε να συμβαίνει κάποια από αυτές τις ενέργειες αναφέρετέ το.
    </string>
    <string name="conIconDesc">Conversation User Icon</string>
</resources>