<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/postLayout"
    style="@style/PostTheme"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/topRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/hashTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/HashTag"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@id/hashTag"
            android:layout_toRightOf="@id/hashTag"
            android:text="@string/admin"
            android:textColor="@color/primaryColor"
            android:textStyle="bold"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/time"
            android:textColor="@color/primaryColorLight"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/middleRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topRow"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:linksClickable="true"
            android:text="@string/post"
            android:textIsSelectable="true"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/post"
            android:layout_marginTop="5dp"
            android:text="@string/location"
            android:textColor="@color/primaryTextColor"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottomRow"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/middleRow"
        android:layout_gravity="bottom"
        android:background="@drawable/post_menu_background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:contentDescription="@string/likeDescription"
            android:src="@drawable/ic_fire_grey"/>

        <TextView
            android:id="@+id/likeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/like"
            android:layout_toRightOf="@id/like"
            android:text="@string/likeCount"
            android:textColor="@color/secondaryTextColor"/>

        <ImageView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/likeCount"
            android:layout_toRightOf="@id/likeCount"
            android:contentDescription="@string/commentDescription"
            android:src="@drawable/ic_comment"/>

        <TextView
            android:id="@+id/commentCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/comment"
            android:layout_toRightOf="@id/comment"
            android:text="@string/commentCount"
            android:textColor="@color/secondaryTextColor"/>

        <ImageView
            android:id="@+id/adminIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:contentDescription="@string/editPostDescription"
            android:src="@drawable/ic_action"
            android:visibility="invisible"/>

    </RelativeLayout>

</RelativeLayout>