<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="12dp">

    <RelativeLayout
        android:id="@+id/topRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="top"
            android:text="@string/groupTitle"/>

        <TextView
            android:id="@+id/groupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/title"
            android:layout_toRightOf="@+id/title"
            android:gravity="top"
            android:text="@string/groupName"/>

        <ImageView
            android:id="@+id/deletePost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:contentDescription="@string/editPostDesc"
            android:src="@drawable/ic_edit"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topRow"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        android:text="@string/post"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post"
        android:orientation="horizontal"
        android:paddingTop="2dp">

        <ImageView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:contentDescription="@string/likeDescription"
            android:src="@drawable/ic_fire_grey"/>

        <TextView
            android:id="@+id/likeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/like"
            android:layout_toRightOf="@id/like"
            android:text="@string/likeCount"
            android:textColor="@color/primaryColorDark"/>

        <ImageView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/likeCount"
            android:layout_toRightOf="@id/likeCount"
            android:contentDescription="@string/commentDescription"
            android:src="@drawable/ic_comment"/>

        <TextView
            android:id="@+id/commentCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/comment"
            android:layout_toRightOf="@id/comment"
            android:text="@string/commentCount"
            android:textColor="@color/primaryColorDark"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@+id/commentCount"
            android:layout_toRightOf="@+id/commentCount"
            android:gravity="end"
            android:text="@string/time"
            android:textColor="@color/primaryColorDark"/>

    </RelativeLayout>

</RelativeLayout>