<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myGroupsRowLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/groupIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/groupIconDesc"
        android:src="@drawable/ic_fire_big"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/groupIcon"
        android:layout_toLeftOf="@+id/edit"
        android:layout_toRightOf="@+id/groupIcon"
        android:layout_toStartOf="@+id/edit"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/myGroupNameProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="start"
            android:shadowColor="@color/white"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="0.9"
            android:textStyle="bold"
            android:maxLines="2"
            android:text="@string/groupName"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/subsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/subsTitle"/>

            <TextView
                android:id="@+id/subscribers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subs"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/edit"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/editGroupDesc"
        android:src="@drawable/ic_edit"/>

</RelativeLayout>