<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.anomologita.m2.anomologita2.activities.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/me_settings"
        android:title="search"
        android:orderInCategory="200"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_me"/>

    <item
        android:id="@+id/messages_settings"
        android:title="@string/chat"
        android:orderInCategory="199"
        app:showAsAction="always"
        android:icon="@drawable/ic_menu_messages"/>

    <item android:id = "@+id/notification_settings"
        android:title="@string/notifications"
        android:orderInCategory="198"
        app:showAsAction="always"
        android:icon="@drawable/ic_menu_notifications"/>

    <item android:id = "@+id/search"
          android:orderInCategory="197"
          app:showAsAction="always"
          android:icon="@drawable/ic_action_search"
          android:title="search"/>

</menu>
