<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/notificationRowLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:minHeight="80dp"
    android:padding="5dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/notificationDescription"
        android:src="@drawable/ic_fire_big"/>

    <TextView
        android:id="@+id/notificationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@+id/image"
        android:layout_toRightOf="@+id/image"
        android:layout_toLeftOf="@+id/delete"
        android:layout_toStartOf="@+id/delete"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center|start"
        android:maxLines="3"
        android:minLines="2"
        android:text="@string/notification"/>

    <ImageView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/deleteNotificationDesc"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/time"
        android:textColor="#9E9E9E"/>

</RelativeLayout>