<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/share"
        style="@style/Settings.Title.Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/ic_share"
        android:drawableStart="@drawable/ic_share"
        android:drawablePadding="20dp"
        android:gravity="center|start"
        android:text="@string/shareDialog"/>

    <TextView
        android:id="@+id/message"
        style="@style/Settings.Title.Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/share"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/ic_message"
        android:drawableStart="@drawable/ic_message"
        android:drawablePadding="20dp"
        android:gravity="center|start"
        android:text="@string/messageDialog"/>

    <TextView
        android:id="@+id/edit"
        style="@style/Settings.Title.Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:drawableLeft="@drawable/ic_edit"
        android:drawableStart="@drawable/ic_edit"
        android:drawablePadding="20dp"
        android:gravity="center|start"
        android:text="@string/editDialog"/>


</RelativeLayout>